--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <script src="index.js"></script>
     </head>
     <body>
-        
+        <h1>This is a header</h1>
+        <p>This is a paragraph</p>
+        <div>
+            <button id="0">Option 0</button>
+            <button id="1">Option 1</button>
+            <button id="2">Option 2</button>
+            <button id="3">Option 3</button>
+        </div>
     </body>
 </html>
