--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>This is a header</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/SMPTE_Color_Bars.svg">
         <p>This is a paragraph</p>
+        <img src="">
         <div>
             <button id="0">Option 0</button>
             <button id="1">Option 1</button>
