--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <p>This is a paragraph</p>
         <img src="">
         <div>
-            <button id="0" class="">Option 0</button>
-            <button id="1" class="">Option 1</button>
-            <button id="2" class="">Option 2</button>
-            <button id="3" class="">Option 3</button>
+            <button id="0">Option 0</button>
+            <button id="1">Option 1</button>
+            <button id="2">Option 2</button>
+            <button id="3">Option 3</button>
         </div>
     </body>
 </html>
