--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             }
             div {
                 display: flex;
+                justify-content: center;
+                align-items: center;
             }
         </style>
     </head>
