--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
             <button onclick="run(2)" id="c">Option 2</button>
             <button onclick="run(3)" id="d">Option 3</button>
         </div>
+        <a href="chat.txt">See the custom markup language!</a>
     </body>
 </html>
